# github-mcp-server

./: CODE_OF_CONDUCT.md  Dockerfile  GitHub终极配置.command  Makefile  Modelfile.claude3  Modelfile.claude3-opus  Modelfile.claude3.5  Modelfile.claude4  OLLAMA_INTEGRATION_SUMMARY.md  README-双模式运行.md  README-无网络Claude运行.md  index.html  start-claude-local.sh  start-github-mcp.sh  tauri.conf.json  test-all-claude.sh
.github/workflows/: ci.yml  docker.yml
cmd/ollama-mcp-server/: main.go
docs/: ollama-mcp-server.md
pkg/github/: repository_resource.go  repository_resource_test.go
pkg/ollama/: client.go  ollama.go  ollama_test.go  stdio.go
src/: App.css  App.jsx  App.tsx  main.tsx  mcp-integration.js  style.css
src-mcp/: FilesystemMCPServer.js  MCPServerInterface.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: MCPServerPanel.tsx  NotificationSystem.tsx
~/Desktop/: GitHub终极配置.command
